# SpaceShooter

./: .gitignore  CMakeLists.txt
Release/AlienElimination.tlog/: AlienElimination.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
app/: main.cpp
include/: BattleField.hpp  Camera.hpp  Clock.hpp  Enemy.hpp  FpsCounter.hpp  GameManager.hpp  Input.hpp  OBJLoader.hpp  Particles.hpp  SceneObject.hpp  Shader.hpp  Skybox.hpp  SpaceShip.hpp  SpaceShipModel.hpp  Text.hpp  Vector3.hpp  Water.hpp  Weapons.hpp
shaders/: map.frag  map.vert  part.frag  part.vert  red.frag  red.vert  ship.frag  ship.vert  skybox.frag  skybox.vert  water.frag  water.vert
src/: BattleField.cpp  Camera.cpp  Enemy.cpp  GameManager.cpp  OBJLoader.cpp  Particles.cpp  SceneObject.cpp  Shader.cpp  Skybox.cpp  SpaceShip.cpp  SpaceShipModel.cpp  Text.cpp  Water.cpp  Weapons.cpp
